<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main_bg"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <com.google.android.material.card.MaterialCardView
           android:layout_width="38dp"
           android:layout_gravity="center"
           app:cardCornerRadius="2dp"
           android:backgroundTint="@color/grey_2"
           android:layout_marginTop="@dimen/spacing_medium"
           android:layout_marginBottom="24dp"
           android:layout_height="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/spacing_large"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="@dimen/spacing_medium"
                android:backgroundTint="@color/blue"
                app:cardCornerRadius="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/iv_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/avatar_modal" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_small"
                    style="@style/Text_1"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:textColor="@color/grey_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_tv_title_resp" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/Title_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:id="@+id/view2"
            android:background="@color/grey_2"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/transparent"
            app:hintTextColor="@color/grey"
            app:boxCornerRadiusTopStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusBottomEnd="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cover_letter"
                android:layout_width="match_parent"
                android:hint="@string/text_et_cover_letter"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:minLines="2"
                android:padding="12dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/text_responses"
            android:id="@+id/response_two_dialog"
            style="@style/Bottom_text_1"
            android:gravity="center"
            android:background="@drawable/bottom_selector_green">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>